--- a/source/_posts/loj3089.md
+++ b/source/_posts/loj3089.md
@@ -50,7 +50,7 @@ We assume $$dp[u][i]$$ represents this state: iteration on the first $$i$$ chara
 
 If the next character of the model string is fixed, we simply update the value for $$dp[sonu(str[i+1])][i+1]$$,
 
-else we’ll have to update all values of $$dp[sonu(0…9)][i+1]$$
+else we’ll have to update all values of $$dp[son_u(0…9)][i+1]$$
 
 For more Details, refer to the code
 
